examples/negative/silent_contract/program_name_no_row.kai
# Silent contract (#520 audit, category 9 / effects): the
# prelude function `program_name()` reads from the process
# environment and per `docs/effects-stdlib.md` should surface
# the appropriate effect (`Env` or similar) in the caller's
# row. kaikai accepts the bare call from a pure-row main, no
# effect demand raised, no handler installed at runtime.
# Falls under the bare-prelude-effect-mapping gap noted in
# the 2026-05-12 Linus + Eric audit (`prelude_effect_for`).
#
# See examples/negative/silent_contract/README.md for follow-up.

fn main() : String = program_name()
